AArch64: Insufficient error handling when CodeBuffer is exhausted

XMLWordPrintable

    • b22
    • aarch64

        Test compiler/profiling/spectrapredefineclass/Launcher.java failed with 'relocation addr must be in this section'

        The full error message:

        # Internal Error (.../open/src/hotspot/share/asm/codeBuffer.hpp:198)
        # assert(allocates2(pc)) failed: relocation addr must be in this section

        This seems to be unstable - out of 10 rerun attempts, only 1 have failed.

        The full stack trace:

        Stack: [0x0000fffbcfc00000,0x0000fffbcfe00000], sp=0x0000fffbcfdfac50, free space=2027k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x7ae498] CodeSection::relocate(unsigned char*, RelocationHolder const&, int) [clone .part.0]+0x1d0
        V [libjvm.so+0x80faa0] CompiledStaticCall::emit_to_interp_stub(CodeBuffer&, unsigned char*)+0x90
        V [libjvm.so+0x302b98] CallStaticJavaDirectNode::emit(CodeBuffer&, PhaseRegAlloc*) const+0x150
        V [libjvm.so+0x1149260] PhaseOutput::fill_buffer(CodeBuffer*, unsigned int*)+0xad0
        V [libjvm.so+0x7ed6ac] Compile::Code_Gen()+0x39c
        V [libjvm.so+0x7f35b0] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xff0
        V [libjvm.so+0x642dec] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xfc
        V [libjvm.so+0x8027a8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xcd0
        V [libjvm.so+0x803b40] CompileBroker::compiler_thread_loop()+0x638
        V [libjvm.so+0x13cf138] JavaThread::thread_main_inner()+0x1f8
        V [libjvm.so+0x13d6b00] Thread::call_run()+0xf8
        V [libjvm.so+0x1122d90] thread_native_entry(Thread*)+0x120
        C [libpthread.so.0+0x7d40] start_thread+0xb4

              Assignee:
              Patric Hedlin (Inactive)
              Reporter:
              Evgeny Nikitin
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: