8248411: [aarch64] Insufficient error handling when CodeBuffer is exhausted

Added error handling.

Reviewed-by: neliasso